Fix horizontal scrolling & finish FAQ page

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -12,8 +12,8 @@
 }
 
 html {
-	height: 100%;
-	overflow-y: hidden;
+    height: 100%;
+    overflow-y: hidden;
 }
 
 body {
@@ -48,7 +48,7 @@ tr {
 
 /* Fixed width for now... for best results, set to width of window/monitor */
 .page { 
-  width: 100vw;
+  width: 100vs;
 }
 
 /* clouds */
@@ -93,6 +93,7 @@ tr {
     left: 10%;
     height: 95%;
     position: absolute;
+    z-index: -1;
 }
 
 #grass {
@@ -111,7 +112,7 @@ tr {
     left: 3%;
     height: 35%;
     position: absolute;
-    z-index: -1;
+    z-index: -2;
 }
 
 .tree2 {
@@ -119,7 +120,7 @@ tr {
     left: 10%;
     height: 23%;
     position: absolute;
-    z-index: 2;
+    z-index: 1;
 }
 
 .tree3 {
@@ -127,7 +128,6 @@ tr {
     left: 12%;
     height: 20%;
     position: absolute;
-    z-index: 1;
 }
 
 .tree4 {
@@ -135,7 +135,7 @@ tr {
     left: 18%;
     height: 20%;
     position: absolute;
-    z-index: 2;
+    z-index: 1;
 }
 
 .tree5 {
@@ -143,23 +143,22 @@ tr {
     left: 24%;
     height: 20%;
     position: absolute;
-    z-index: 3;
+    z-index: 2;
 }
 
 .tree6 {
     bottom: 3%;
-    left: 39%;
+    left: 34%;
     height: 17%;
     position: absolute;
-    z-index: 2;
+    z-index: 1;
 }
 
 .tree7 {
     bottom: 2%;
-    left: 42%;
+    left: 36%;
     height: 25%;
     position: absolute;
-    z-index: 1;
 }
 
 .tree8 {
@@ -167,6 +166,7 @@ tr {
     right: 23%;
     height: 40%;
     position: absolute;
+    z-index: -1;
 }
 
 /* Page 2 */
@@ -289,13 +289,45 @@ tr {
     left: 280%;
 }
 
-/* 
 .city {
     position: absolute;
     width: 100%;
-    left: 200%;
-    bottom: 0;
+    left: 205%;
+    bottom: 12%;
 }
-*/
+
+.faqSquirrel {
+    position: absolute;
+    bottom: 5%;
+    left: 243%;
+    width: 18%;
+    height: auto;
+}
+
+.trees1 {
+    position: absolute;
+    left: 210%;
+    bottom: 5%;
+    width: 17%;
+    height: auto;
+}
+
+.trees2 {
+    position: absolute;
+    left: 270%;
+    bottom: 5%;
+    width: 17%;
+    height: auto;
+}
 
 /* NEED TO IMPLEMENT: RESPONSIVENESS...MEDIA QUERIES/BOOTSTRAP? */
+
+@media(max-width: 1680px) {
+    p {
+        font-size: 1.2em;
+    }
+
+    .description {
+        font-size: 1.2em;
+    }
+}
